--- a/swsite/templates/wakawaka/edit.html
+++ b/swsite/templates/wakawaka/edit.html
@@ -29,35 +29,29 @@
 	</h1>
 
 	{% if rev.is_not_current %}
-	<p class="revert-warning">{% trans "You are editing an revision which is not the latest!" %}</p>
+    	<p class="revert-warning">{% trans "You are editing an revision which is not the latest!" %}</p>
 	{% endif %}
 
 	{% if is_locked and have_lock %}
-	<p class="lock-notice">{% trans "The page is locked for you." %}</p>
+    	<p class="lock-notice">{% trans "Edit the page below. If you change your mind click" %} <a href="?cancel_lock=true">{% trans "Cancel" %}</a> {% trans "so others may edit the page." %}</p>
 
-    {# creole cheatsheet #}
-    <img style="float:right;" src="{{ MEDIA_URL }}wiki/creole_cheat_sheet.png" width="275" height="469" alt="Creole Cheat Sheet">
+        {# creole cheatsheet #}
+        <img style="float:right;" src="{{ MEDIA_URL }}wiki/creole_cheat_sheet.png" width="275" height="469" alt="Creole Cheat Sheet">
 
-	<form class="wakawaka_edit_form" method="POST" action="">
-	    {% csrf_token %}
-		{{ form.as_p }}
-		<p>
-            <input type="submit" value="{% trans "Save changes" %}" />
-            {% trans "or" %} <a href="
-			{% if page.is_initial %}
-				javascript:window.history.go(-1);
-			{% else %}
-				?cancel_lock=true
-			{% endif %}
-			">{% trans "Cancel" %}</a>
-		</p>
-	</form>
+    	<form class="wakawaka_edit_form" method="POST" action="">
+    	    {% csrf_token %}
+    		{{ form.as_p }}
+    		<p>
+                <input type="submit" value="{% trans "Save changes" %}" />
+                {% trans "or" %} <a href="?cancel_lock=true">{% trans "Cancel" %}</a>
+    		</p>
+    	</form>
 	{% else %}
-	{% blocktrans with lock_timestamp|timesince as lock_timestamp %}The page is locked for {{ lock_owner }} since about {{ lock_timestamp }}.{% endblocktrans %}
-	{% if allowed_to_reset %}<a href="?reset_lock=true" title="Locked for another {{ lock_ttl|timeuntil }}">{% trans "Reset lock" %}</a>{% endif %}
-	<div class="page">
-		{% include "wakawaka/page_content.html" %}
-	</div>
+    	{% blocktrans with lock_timestamp|timesince as lock_timestamp %}The page is locked for {{ lock_owner }} since about {{ lock_timestamp }}.{% endblocktrans %}
+    	{% if allowed_to_reset %}<a href="?reset_lock=true" title="Locked for another {{ lock_ttl|timeuntil }}">{% trans "Reset lock" %}</a>{% endif %}
+    	<div class="page">
+    		{% include "wakawaka/page_content.html" %}
+    	</div>
 	{% endif %}
 
 	<h2>{% trans "Revisions for this page" %}</h2>
