Move wiki link bar to top rather than float right

--- a/swsite/templates/wakawaka/base.html
+++ b/swsite/templates/wakawaka/base.html
@@ -14,9 +14,9 @@
 
 {% block content_body %}
     {% spaceless %}
-    <div id="wiki-info">
+    <div id="wiki-info" class="alpha omega grid_12">
     	<span>
-    		<a href="{% url wakawaka_index %}">{% trans "Start" %}</a>
+    		<a href="{% url wakawaka_index %}">{% trans "WikiIndex" %}</a>
     	</span>
     	<span>
     		<a href="{% url wakawaka_revision_list %}">{% trans "Recent revisions" %}</a>
