--- a/swsite/media/css/wiki.css
+++ b/swsite/media/css/wiki.css
@@ -1,7 +1,7 @@
 #wiki-info {
-    float: right;
     padding: .5em;
-    margin: 1em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     border: 2px solid #257329;
 }
 
