--- a/swsite/templates/wakawaka/page.html
+++ b/swsite/templates/wakawaka/page.html
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {% block content %}
-	<h1><a href="{% url wakawaka_page slug=page.slug %}">{{ page.slug }}</a></h1>
+	<h1><a name="top" href="{% url wakawaka_page slug=page.slug %}">{{ page.slug }}</a></h1>
 
 	{% if rev.is_not_current %}
 	<p class="revert-warning">
@@ -34,15 +34,11 @@
 	</p>
 	{% endif %}
 
-	<div class="page">
-        {% include "wakawaka/page_content.html" %}
-	</div>
-
 	{% spaceless %}
 	<div class="info">
-    	<span>
-    		<strong>{{ page.slug }}</strong>
-    	</span>
+	    <span>
+	        {% trans "Revision" %} {{ rev.id }}.
+        </span>
     	<span>
     		{% blocktrans with page.current.creator as creator and rev.modified|date:_("DATETIME_FORMAT") as modified %}
     		    Recently modified by <em>{{ creator }}</em>: {{ modified }}
@@ -57,6 +53,27 @@
     	{% endif %}
 	</div>
 	{% endspaceless %}
+
+	<hr/>
+
+	<div class="page">
+        {% include "wakawaka/page_content.html" %}
+	</div>
+
+    <hr/>
+
+    {% spaceless %}
+    <div class="info">
+        <span>
+            <a href="#top">Back to top</a>.
+        </span>
+    	{% if perms.wakawaka.change_wikipage %}
+    	<span>
+    		<a href="{% url wakawaka_edit slug=page.slug %}">{% trans "Edit" %}</a>
+    	</span>
+    	{% endif %}
+    </div>
+    {% endspaceless %}
 
 	{% spaceless %}
 	<div class="related">
