--- a/swsite/templates/base_short.html
+++ b/swsite/templates/base_short.html
@@ -5,8 +5,8 @@
     <h1><a href="/">SensibleWashington.org</a></h1>
     <h2>Legalize Cannabis<br/>in 2011</h2>
     <div id="site-search">
-        <form action="" method="get">
-            <input name="search" type="text" value="Search">
+        <form action="/search/" method="get">
+            <input name="q" type="search" id="search_q">
         </form>
     </div>
     <div id="follow-campaign">
