--- a/swsite/media/css/base.css
+++ b/swsite/media/css/base.css
@@ -1,7 +1,7 @@
 /* @override http://localhost:8000/media/css/base.css */
 
 a {
-    color: #257239;
+    color: #0D8751;
 }
 
 body {
@@ -14,7 +14,7 @@ body {
 #auth-info {
     text-align: right;
     font-size: 14px;
-    border-bottom: 2px solid #257239;
+    border-bottom: 2px solid #0D8751;
     position: relative;
     height: 22px;
 }
@@ -31,7 +31,7 @@ body {
 
 #auth-info a:hover {
     color: white;
-    background-color: #257239;
+    background-color: #0D8751;
 }
 
 /* @endgroup */
@@ -39,21 +39,18 @@ body {
 /* @group header */
 
 .header {
-    color: white;
-    margin-top: 50px;
     margin-left: 0px;
     position: relative;
 }
 
 .header.large {
-    background-color: #257239;
     width: 960px;
 }
 
 .header.large {
-    background-image: url("../images/logos/green-219x140.png");
+    background-image: url("../images/logos/revised-281x140.gif");
     background-repeat: no-repeat;
-    background-size: 219px 140px;
+    background-size: 281px 140px;
     background-position: 5px;
     height: 140px;
     width: 960px;
@@ -111,7 +108,6 @@ body {
 /* @group #site-sections */
 
 div#site-sections {
-    position: absolute;
     display: table;
     top: 24px;
     left: 5px;
@@ -120,6 +116,8 @@ div#site-sections {
     margin-left: -5px;
     margin-right: 0px;
     width: 960px;
+    border-top: 2px solid #0D8751;
+    border-bottom: 2px solid #0D8751;
 }
 
 div#site-sections ul {
@@ -133,7 +131,7 @@ div#site-sections li {
     display: table-cell;
     text-align: center;
     vertical-align: middle;
-	color: #257239;
+	color: #0D8751;
 }
 
 div#site-sections a {
@@ -142,11 +140,6 @@ div#site-sections a {
 	width: 160px;
 	text-decoration: none;
 	color: inherit;
-}
-
-div#site-sections li.active {
-    background-color:  #257239;
-    color: white;
 }
 
 div#site-sections .section-title {
@@ -173,7 +166,7 @@ div#site-sections .featured .section-title {
 
 div#site-sections li:hover {
     color: white;
-    background: #257239;
+    background: #0D8751;
 }
 
 /* @end */
@@ -198,7 +191,7 @@ div#sidebar .sidebar-icon {
 }
 
 div#sidebar h1 {
-    color: #257239;
+    color: #0D8751;
     font-size: 14pt;
     margin-bottom: .5em;
 }
@@ -233,7 +226,7 @@ ul.checklist li {
     background-attachment: scroll;
     padding-left: 50px;
     font-size: 14pt;
-    color: #257239;
+    color: #0D8751;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-left: 0;
@@ -277,7 +270,7 @@ ul.thumbnails .caption {
 }
 
 .section.news .section h1 {
-    background-color: #257239;
+    background-color: #0D8751;
     color: white;
     font-weight: normal;
     text-align: center;
@@ -307,7 +300,7 @@ form#join-campaign-form input[type="submit"] {
 
 div.footer {
 	margin-top: 2em;
-    border-top: 2px solid #257239;
+    border-top: 2px solid #0D8751;
 }
 
 div.footer span {
