Provide an empty favicon for now, rather than no favicon.

--- a/sw/templates/base.html
+++ b/sw/templates/base.html
@@ -4,6 +4,9 @@
 <head>
     <title>{% block page_title %}Welcome{% endblock %} - Sensible Washington</title>
 
+    <link rel="icon" href="{{ STATIC_URL }}images/logos/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ STATIC_URL }}images/logos/favicon.ico" type="image/x-icon">
+
     {# 960.gs #}
     <link href="{{ STATIC_URL }}css/reset.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/text.css" rel="stylesheet">
