--- a/sw/templates/base_short.html
+++ b/sw/templates/base_short.html
@@ -22,6 +22,7 @@
 
 {% block content_wrapper %}
     <div id="content" class="alpha omega grid_12">
+        {% include "site_messages.html" %}
         {% block content_body %}{% endblock %}
     </div>
 {% endblock %}
