--- a/sw/templates/cms/base.html
+++ b/sw/templates/cms/base.html
@@ -5,6 +5,7 @@
 
 {% block content_wrapper %}
     <div id="content" class="alpha omega grid_12">
+        {% include "site_messages.html" %}
         <div class="section">
             <h1>{% page_attribute "page_title" %}</h1>
 
