--- a/sw/templates/site_base.html
+++ b/sw/templates/site_base.html
@@ -4,6 +4,7 @@
 
 {% block content_wrapper %}
     <div id="content" class="alpha omega grid_12">
+        {% include "site_messages.html" %}
         <div class="section">
             {% block body %}
             {% endblock %}
