Beginning of a dashboard app, including a mockup layout at /dashboard/.

--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -326,6 +326,14 @@ form#join-campaign-form input[type="submit"] {
 
 /* @end */
 
+/* @group dashboard */
+
+ul.stream li.event {
+    padding-bottom: 1em;
+}
+
+/* @end */
+
 /* @group footer */
 
 div.footer {
