--- a/sw/templates/search/search.html
+++ b/sw/templates/search/search.html
@@ -1,4 +1,4 @@
-{% extends 'base_short.html' %}
+{% extends 'base_fullwidth.html' %}
 {% load uni_form_tags %}
 
 {% block page_title %}Search{% endblock %}
