--- a/sw/templates/wakawaka/edit.html
+++ b/sw/templates/wakawaka/edit.html
@@ -1,5 +1,6 @@
-{% extends "wakawaka/base.html" %}
+{% extends "wakawaka/base_fullwidth.html" %}
 
+{% load group_tags %}
 {% load i18n %}
 {% load uni_form_tags %}
 
@@ -8,7 +9,7 @@
 
 	{# Add support for the Universal Edit Button #}
 	{% if perms.wakawaka.change_wikipage %}
-	<link rel="edit" title="{% trans "Edit this page" %}" href="{% url wakawaka_edit slug=page.slug %}" />
+	<link rel="edit" title="{% trans "Edit this page" %}" href="{% groupurl wakawaka_edit group slug=page.slug %}" />
 	{% endif %}
 {% endblock %}
 
