--- a/sw/templates/wakawaka/revision_list.html
+++ b/sw/templates/wakawaka/revision_list.html
@@ -1,5 +1,6 @@
 {% extends "wakawaka/base.html" %}
 
+{% load group_tags %}
 {% load i18n %}
 {% load pagination_tags %}
 
@@ -22,14 +23,14 @@
 	</tr>
 	{% for rev in revision_list %}
 	<tr>
-		<td><a href="{% url wakawaka_page slug=rev.page.slug, rev_id=rev.pk %}">{{ rev.page.slug }}</a></td>
+		<td><a href="{% groupurl wakawaka_page group slug=rev.page.slug, rev_id=rev.pk %}">{{ rev.page.slug }}</a></td>
 		<td class="modifed">{{ rev.modified|timesince }} ago</td>
 		<td class="message">{{ rev.message }}</td>
 		<td class="creator">{{ rev.creator.username }}</td>
 		<td class="options">
-			<a href="{% url wakawaka_page slug=rev.page.slug, rev_id=rev.pk %}">{% trans "View" %}</a>
+			<a href="{% groupurl wakawaka_page group slug=rev.page.slug, rev_id=rev.pk %}">{% trans "View" %}</a>
 			{% if user.is_authenticated %}
-			<a href="{% url wakawaka_edit slug=rev.page.slug, rev_id=rev.pk %}">{% trans "Revert" %}</a>
+			<a href="{% groupurl wakawaka_edit group slug=rev.page.slug, rev_id=rev.pk %}">{% trans "Revert" %}</a>
 			{% endif %}
 		</td>
 	</tr>
