--- a/sw/templates/wakawaka/revision_table.html
+++ b/sw/templates/wakawaka/revision_table.html
@@ -1,6 +1,7 @@
+{% load group_tags %}
 {% load i18n %}
 
-<form method="GET" action="{% url wakawaka_changes slug=page.slug %}">
+<form method="GET" action="{% groupurl wakawaka_changes group slug=page.slug %}">
 {% csrf_token %}
 <table class="history" border="1">
 <tr>
@@ -36,8 +37,8 @@
 	<td class="message">{{ rev.message }}</td>
 	<td class="creator">{{ rev.creator.username }}</td>
 	<td class="options">
-		<a href="{% url wakawaka_page slug=page.slug, rev_id=rev.pk %}">{% trans "View" %}</a>
-		<a href="{% url wakawaka_edit slug=page.slug, rev_id=rev.pk %}">{% trans "Revert" %}</a>
+		<a href="{% groupurl wakawaka_page group slug=page.slug, rev_id=rev.pk %}">{% trans "View" %}</a>
+		<a href="{% groupurl wakawaka_edit group slug=page.slug, rev_id=rev.pk %}">{% trans "Revert" %}</a>
 	</td>
 </tr>
 {% endfor %}
