--- a/sw/templates/site_base_sidebars.html
+++ b/sw/templates/site_base_sidebars.html
@@ -1,11 +1,8 @@
-{% extends "base_fullwidth.html" %}
+{% extends "base.html" %}
 
 {% block page_title %}{% block head_title %}{% endblock %}{% endblock %}
 
 {% block content_body %}
     {% block body %}
     {% endblock %}
-{% endblock %}
-
-{% block sidebar %}
 {% endblock %}
