--- a/sw/templates/wakacmsplugin/wikipagesnippet.html
+++ b/sw/templates/wakacmsplugin/wikipagesnippet.html
@@ -1,1 +1,1 @@
-{% load sw_tags %}{% load markup_tags %}{{ content|wikify_creole_links|apply_markup:"creole" }}
+{% load sw_tags %}{% load markup_tags %}{{ content|wikify_creole_links:snippetgroup|apply_markup:"creole" }}
