--- a/sw/templates/wakawaka/base_fullwidth.html
+++ b/sw/templates/wakawaka/base_fullwidth.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_fullwidth.html" %}
 
 {% load group_tags %}
 {% load i18n %}
@@ -18,6 +18,5 @@
     {% endblock %}
 {% endblock %}
 
-{% block sidebar_sections %}
-    {% include "sidebars/wikicommon.html" %}
+{% block sidebar %}
 {% endblock %}
