--- a/sw/templates/wakawaka/changes.html
+++ b/sw/templates/wakawaka/changes.html
@@ -1,7 +1,8 @@
 {% extends "wakawaka/base.html" %}
 
-{% load wakawaka_tags %}
+{% load group_tags %}
 {% load i18n %}
+{% load wakawaka_tags %}
 
 {% block extrahead %}
 	{{ block.super }}
@@ -13,7 +14,7 @@
 
 	{# Add support for the Universal Edit Button #}
 	{% if perms.wakawaka.change_wikipage %}
-	<link rel="edit" title="{% trans "Edit this page" %}" href="{% url wakawaka_edit slug=page.slug %}" />
+	<link rel="edit" title="{%trans "Edit this page" %}" href="{% groupurl wakawaka_edit group slug=page.slug %}" />
 	{% endif %}
 {% endblock %}
 
