--- a/sw/templates/wakawaka/page_list.html
+++ b/sw/templates/wakawaka/page_list.html
@@ -1,5 +1,6 @@
 {% extends "wakawaka/base.html" %}
 
+{% load group_tags %}
 {% load i18n %}
 
 {% block title %}
@@ -10,7 +11,7 @@
 	<h1>{% trans "All wiki pages" %}</h1>
 	<ul>
 	{% for page in page_list %}
-	<li><a href="{% url wakawaka_page slug=page.slug %}">{{ page.slug }}</a>
+	<li><a href="{% groupurl wakawaka_page group slug=page.slug %}">{{ page.slug }}</a>
 	{% endfor %}
 	</ul>
 {% endblock %}
