--- a/sw/templates/wakawaka/revisions.html
+++ b/sw/templates/wakawaka/revisions.html
@@ -1,5 +1,6 @@
 {% extends "wakawaka/base.html" %}
 
+{% load group_tags %}
 {% load i18n %}
 
 {% block extrahead %}
@@ -7,7 +8,7 @@
 
 	{# Add support for the Universal Edit Button #}
 	{% if perms.wakawaka.change_wikipage %}
-	<link rel="edit" title="{% trans "Edit this page" %}" href="{% url wakawaka_edit slug=page.slug %}" />
+	<link rel="edit" title="{% trans "Edit this page" %}" href="{% groupurl wakawaka_edit group slug=page.slug %}" />
 	{% endif %}
 {% endblock %}
 
