Allow joining/leaving teams.

--- a/sw/templates/teams/index.html
+++ b/sw/templates/teams/index.html
@@ -14,3 +14,7 @@
         {% endfor %}
     </ul>
 {% endblock %}
+
+{% block sidebar_sections %}
+    {% include "sidebars/yourteams.html" %}
+{% endblock %}
