--- a/sw/templates/teams/team.html
+++ b/sw/templates/teams/team.html
@@ -17,3 +17,8 @@
         </ul>
     {% endif %}
 {% endblock %}
+
+{% block sidebar_sections %}
+    {% include "sidebars/teamjoinleave.html" %}
+    {% include "sidebars/yourteams.html" %}
+{% endblock %}
