--- a/sw/templates/teams/team.html
+++ b/sw/templates/teams/team.html
@@ -12,8 +12,8 @@
 
         <ul>
             <li><a href="{% groupurl wakawaka_index group %}">Home Page</a></li>
-            <li><a href="{% groupurl wakawaka_page_list group %}">Recent changes</a></li>
-            <li><a href="{% groupurl wakawaka_revision_list group %}">List of all pages</a></li>
+            <li><a href="{% groupurl wakawaka_revision_list group %}">Recent changes</a></li>
+            <li><a href="{% groupurl wakawaka_page_list group %}">List of all pages</a></li>
         </ul>
     {% endif %}
 {% endblock %}
