only show team in activity stream on dashboard, not in team home page

--- a/sw/templates/activity/action.html
+++ b/sw/templates/activity/action.html
@@ -20,7 +20,7 @@
 
 <span class="timestamp">
     {{ action.timestamp|timesince }} ago
-    {% if action.target %}
+    {% if action.target and not group %}
         in
         <span class="target">
             {% if action.target.get_absolute_url %}
