Include WikiIndex of a team's wiki on its home page if it exists.

--- a/sw/templates/teams/team.html
+++ b/sw/templates/teams/team.html
@@ -9,6 +9,12 @@
     {% if group.is_private and not is_team_member %}
         <p>This team is private.</p>
     {% else %}
+        {% if team_wiki_index_page %}
+            {% with team_wiki_index_page.current as rev %}
+                {% include "wakawaka/page_content.html" %}
+            {% endwith %}
+        {% endif %}
+
         <h1>Recent Activity</h1>
 
         {% autopaginate team_actions %}
