--- a/sw/templates/wakawaka/page.html
+++ b/sw/templates/wakawaka/page.html
@@ -43,7 +43,7 @@
 
 {% block sidebar_sections %}
     <div class="section">
-        <h1>This Page</h1>
+        <h1>This Wiki Page</h1>
 
         <ul>
         	{% if perms.wakawaka.change_wikipage %}
